--- a/haskell-reals-comparison.cabal
+++ b/haskell-reals-comparison.cabal
@@ -9,23 +9,22 @@ Copyright:      (c) 2015 Michal Konecny
 Maintainer:     mikkonecny@gmail.com
 Stability:      experimental
 Category:       Data, Math
-Synopsis:       compare Haskell exact real number implementations
+Synopsis:       comparison of Haskell exact real number implementations
 Tested-with:    GHC==7.8.4
-Description:    Compare Haskell exact real number implementations.
+Description:    Comparison of Haskell exact real number implementations
 
 executable haskell-reals-comparison
-  build-depends:   
+  build-depends:
         base >= 4,
         aern2-num == 0.1,
         exact-real,
         ireal
   hs-source-dirs:  src
   ghc-options:     -O2 -Wall -rtsopts
-  extensions:       
-                    OverloadedStrings, 
+  extensions:
+                    OverloadedStrings,
                     RebindableSyntax
-  other-modules: 
+  other-modules:
                  Tasks.AERN2Ops,
                  Tasks.PreludeOps
   main-is: Main.hs
-
