--- a/haskell-reals-comparison.cabal
+++ b/haskell-reals-comparison.cabal
@@ -10,13 +10,14 @@ Maintainer:     mikkonecny@gmail.com
 Stability:      experimental
 Category:       Data, Math
 Synopsis:       comparison of Haskell exact real number implementations
-Tested-with:    GHC==7.8.4
+Tested-with:    GHC==7.10.3
 Description:    Comparison of Haskell exact real number implementations
 
 executable haskell-reals-comparison
   build-depends:
         base >= 4,
-        aern2-num == 0.1,
+        mixed-types-num == 0.1,
+        aern2-mp == 0.1,
         exact-real,
         ireal
   hs-source-dirs:  src
