--- a/haskell-reals-comparison.cabal
+++ b/haskell-reals-comparison.cabal
@@ -18,7 +18,7 @@ executable haskell-reals-comparison
         base >= 4,
         mixed-types-num == 0.1,
         aern2-mp == 0.1,
-        exact-real,
+        -- exact-real,
         ireal
   hs-source-dirs:  src
   ghc-options:     -O2 -Wall -rtsopts
