--- a/haskell-reals-comparison.cabal
+++ b/haskell-reals-comparison.cabal
@@ -15,12 +15,12 @@ Description:    Comparison of Haskell exact real number implementations
 
 executable haskell-reals-comparison
   build-depends:
-        base >= 4,
-        mixed-types-num == 0.1,
-        aern2-mp == 0.1,
-        aern2-real == 0.1,
-        -- exact-real,
-        ireal
+    base >= 4
+    , mixed-types-num == 0.1
+    , aern2-mp == 0.1
+    , aern2-real == 0.1
+    -- , exact-real
+    , ireal
   hs-source-dirs:  src
   ghc-options:     -O2 -Wall -rtsopts
   extensions:
