--- a/haskell-reals-comparison.cabal
+++ b/haskell-reals-comparison.cabal
@@ -9,7 +9,7 @@ copyright:      (c) 2015-2017 Michal Konecny
 license:        BSD3
 license-file:   LICENSE
 stability:      experimental
-tested-with:    GHC==7.8.4, GHC==7.10.3, GHC==8.0.1
+tested-with:    GHC==7.10.3, GHC==8.0.2
 category:       Math
 Synopsis:       comparison of Haskell exact real number implementations
 Description:    Comparison of Haskell exact real number implementations
