update to mixed-types-num 0.3.1

--- a/haskell-reals-comparison.cabal
+++ b/haskell-reals-comparison.cabal
@@ -17,7 +17,7 @@ Description:    Comparison of Haskell exact real number implementations
 executable haskell-reals-comparison
   build-depends:
     base >= 4
-    , mixed-types-num == 0.3.*
+    , mixed-types-num >= 0.3.1 && < 0.4
     , aern2-mp == 0.1.*
     , aern2-real == 0.1.*
     -- , exact-real
