--- a/haskell-reals-comparison.cabal
+++ b/haskell-reals-comparison.cabal
@@ -22,6 +22,7 @@ executable haskell-reals-comparison
     , aern2-real == 0.1.*
     -- , exact-real
     , ireal
+    , cdar
   hs-source-dirs:  src
   ghc-options:     -O2 -Wall -rtsopts
   extensions:
